infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ucodts-service
spec:
  selector:
    app: ucodts-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
